--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
             </div>
         </div>
         <div class="col-right">
-            <img src="/Group 8425.png" alt="">
+            <img src="Group 8425.png" alt="">
         </div>
     </div>
     <section class="about-section">
         <div class="col-left">
-            <img src="/Person Image.png" alt="">
+            <img src="Person Image.png" alt="">
         </div>
         <div class="col-right">
             <h1>about me</h1>
@@ -42,17 +42,17 @@
         </div>
         <div class="blog-card">
             <div class="card">
-                <img src="/photo_2021-03-06_20-24-57.jpg" alt="">
+                <img src="photo_2021-03-06_20-24-57.jpg" alt="">
                 <h1>Tour Title</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptas suscipit earum? Ipsa fuga veniam incidunt ab natus inventore magni quam. Repudiandae, possimus maxime omnis dolorum ad temporibus placeat iure.</p>
             </div>
             <div class="card">
-                <img src="/photo_2021-03-06_20-29-48 (2).jpg" alt="">
+                <img src="photo_2021-03-06_20-29-48 (2).jpg" alt="">
                 <h1>Tour Title</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptas suscipit earum? Ipsa fuga veniam incidunt ab natus inventore magni quam. Repudiandae, possimus maxime omnis dolorum ad temporibus placeat iure.</p>
             </div>
             <div class="card">
-                <img src="/IMG_20201005_064327.jpg" alt="">
+                <img src="IMG_20201005_064327.jpg" alt="">
                 <h1>Tour Title</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam voluptas suscipit earum? Ipsa fuga veniam incidunt ab natus inventore magni quam. Repudiandae, possimus maxime omnis dolorum ad temporibus placeat iure.</p>
             </div>
